# kicad_lib

./: Cargo.toml  LICENSE  README.md
kicad_format/: Cargo.toml
kicad_format/src/: convert.rs  footprint_library.rs  lib.rs  symbol_library.rs
kicad_format/src/common/: mod.rs  shape.rs  symbol.rs  zone.rs
kicad_format/src/common/footprint/: mod.rs  shape.rs  text.rs
kicad_format/src/common/pad/: mod.rs  primitive.rs
kicad_format/src/netlist/: mod.rs
kicad_format/src/pcb/: mod.rs  setup.rs
kicad_format/src/pcb/graphics/: dimension.rs  mod.rs  shape.rs  text.rs
kicad_format/src/schematic/: mod.rs  sheet.rs  symbol.rs
kicad_format/tests/: to_and_from_sexpr.rs
kicad_format/tests/footprint_library/: LED_SK6812_EC15_1.5x1.5mm.kicad_mod  NetTie-2_SMD_Pad2.0mm.kicad_mod  NetTie-3_THT_Pad1.0mm.kicad_mod
kicad_format/tests/netlist/: ampli_ht.net  bus_pci.net  complex_hierarchy.net  ecc83-pp_v2.net  esvideo.net  graphic.net  modul.net  muxdata.net  pal-ntsc.net  pic_programmer.net  pic_sockets.net  rams.net  sallen_key.net  test.net  video.net
kicad_format/tests/pcb/: TMC2209 Dev Board v1.kicad_pcb
kicad_format/tests/schematic/: ampli_ht.kicad_sch  bus_pci.kicad_sch  complex_hierarchy.kicad_sch  ecc83-pp.kicad_sch  ecc83-pp_v2.kicad_sch  esvideo.kicad_sch  flat_hierarchy.kicad_sch  graphic.kicad_sch  modul.kicad_sch  muxdata.kicad_sch  pal-ntsc.kicad_sch  pic_programmer.kicad_sch  pic_sockets.kicad_sch  rams.kicad_sch  sallen_key.kicad_sch  test.kicad_sch  video.kicad_sch
kicad_format/tests/symbol_library/: Adrians Symbol Library.kicad_sym  Analog.kicad_sym  Diode.kicad_sym  FPGA_Lattice.kicad_sym  GPU.kicad_sym  Graphic.kicad_sym  LED.kicad_sym  MCU_Espressif.kicad_sym  Oscillator.kicad_sym
kicad_sexpr/: Cargo.toml
kicad_sexpr/src/: lib.rs  number.rs  sexpr.rs  string.rs
kicad_sexpr_lexer/: Cargo.toml
kicad_sexpr_lexer/src/: lib.rs  token.rs
kicad_sexpr_lexer/tests/: mod.rs
(+1 files in other folders)
