[package]
name = "kicad_sexpr"
version = "0.1.1"
edition = "2021"
description = "A library for parsing the KiCad S-Expression encoding format"
authors = ["Adrian Wowk <adrian@adom.inc>"]
license = "MIT"

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.130", features = ["derive"], optional = true }
thiserror = "1.0.56"

[features]
serde = ["dep:serde"]
